--- a/WindowPainless/packages.config
+++ b/WindowPainless/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Desktop.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="10.0.0" targetFramework="net46" />
+  <package id="Microsoft.AnalyzerPowerPack" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="1.2.0-beta-20151211-01" targetFramework="net461" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.0.0-rc2" targetFramework="net461" developmentDependency="true" />
+  <package id="System.Runtime.Analyzers" version="1.0.1" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.Analyzers" version="1.0.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Hashing.Algorithms.Analyzers" version="1.1.0" targetFramework="net461" />
 </packages>
