--- a/WindowPainless/App.config
+++ b/WindowPainless/App.config
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WindowPainless.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+    <userSettings>
+        <WindowPainless.Properties.Settings>
+            <setting name="MaximumColumns" serializeAs="String">
+                <value>3</value>
+            </setting>
+            <setting name="MaximumRows" serializeAs="String">
+                <value>2</value>
+            </setting>
+        </WindowPainless.Properties.Settings>
+    </userSettings>
 </configuration>
